refactoed transform types to enum